# 6_Parascript

./: CMakeLists.txt  README.md  main.cpp  test.dot
src/Compiler/: Asm_request.cpp  Compiler.cpp  Statements_request.cpp
src/Compiler/headers/: Compiler.h  Irequest.h
src/Lexer/: Icontent_of_statement.cpp  Icontrol_struct.cpp  Ioperand.cpp  Ioperator.cpp  Lexer.cpp
src/Lexer/headers/: DSL.h  Icontent_of_statement.h  Icontrol_struct.h  Inode.h  Ioperand.h  Ioperator.h  Lexer.h
src/Parcer/: Parcer.cpp
src/Parcer/headers/: Parcer.h
